# tezos

./: CHANGES.md  Makefile
docs/shell/: bootstrapper.rst  validation.rst
scripts/: install_build_deps.raw.sh
src/bin_node/: node_config_file.ml  node_identity_file.ml  node_shared_arg.ml  node_storage_command.ml
src/bin_validation/: validator.ml
src/lib_context/: context.ml  context.mli  context_dump.ml  context_dump_intf.ml  context_impl.ml  context_intf.ml  context_v1.ml  dune  env.ml  merge.ml  tezos_context.ml  utils.ml  utils.mli  utils_intf.ml
src/lib_context/recording/: dune  manage_stats.ml  misc.ml  raw_actions_trace_definition.ml  raw_actions_trace_recorder.ml  recorder.ml  shim.ml  shim.mli  stats_trace_definition.ml  stats_trace_recorder.ml  trace_auto_file_format.ml  trace_auto_file_format.mli  trace_auto_file_format_intf.ml  trace_common.ml  trace_common.mli  trace_raw_actions_summary.ml  trace_stats_summary.ml  trace_stats_summary_cb.ml  trace_stats_summary_conf.ml  trace_stats_summary_pp.ml  trace_stats_summary_utils.ml  trace_stats_summary_utils.mli
src/lib_context/sigs/: context.ml  dune
src/lib_crypto/: signature.ml  tezos-crypto.opam
src/lib_protocol_environment/: dummy_context.ml  environment_V5.ml  environment_V5.mli  environment_context.ml  environment_context_intf.ml  memory_context.ml  memory_context.mli  proxy_context.ml  proxy_context.mli  shell_context.ml  shell_context.mli
src/lib_proxy/: light_core.ml  light_internal.ml  local_context.ml  local_context.mli
src/lib_shell/: block_directory.ml  block_validator.mli  node.ml  (+11 more)
(+72 files in other folders)
